Fix image overflow issue

--- a/src/components/header-bar/headerBar.module.css
+++ b/src/components/header-bar/headerBar.module.css
@@ -7,6 +7,7 @@
     padding: 40px 40px 0 40px;
     margin: auto;
     max-width: 1600px;
+    max-height: 103px;
 }
 
 .overlay {
